Korrektur von Robin wurde eingefuegt

--- a/references.bib
+++ b/references.bib
@@ -717,3 +717,14 @@ Die Softwareverteilung ist ein kritischer Prozess, da mit ihr auch Betriebssyste
 	date = {1968-04},
 	file = {Home Page of Mel Conway's Site:/Users/eddie/Zotero/storage/TKUZI2ZJ/committees.html:text/html}
 }
+
+@online{react-anwendung,
+	title = {Erstelle eine neue React Anwendung},
+	url = {https://de.reactjs.org/docs/create-a-new-react-app.html},
+	shorttitle = {React-Anwendung},
+	abstract = {Eine {JavaScript} Bibliothek zum Erstellen von Benutzeroberflächen},
+	urldate = {2020-07-05},
+	langid = {english},
+	note = {Library Catalog: de.reactjs.org},
+	file = {Snapshot:/Users/eddie/Zotero/storage/WEY84F9I/create-a-new-react-app.html:text/html}
+}
