--- a/sections/Anhang/rahles.tex
+++ b/sections/Anhang/rahles.tex
@@ -52,7 +52,7 @@ R: Da gibt es, glaube ich kein Richtig und Falsch.
 R: Man sollte sich immer die Fragen stellen: Aus einer rein technologisch, wirtschaftlich Perspektive macht es im Moment Sinn, ein Microservice auszugliedern? Weil das ist es im Moment.
 
 \label{appendix:r-8} \label{appendix:r-9}
-R: Meistens ist es so, dass man mit einem Monolithen anfängt und irgendwann an ein Punkt kommt, wo es entweder sehr drückend wird oder wo man sagt: “Es macht Sinn Dinge auszulagern”.
+R: Meistens ist es so, dass man mit einem Monolithen anfängt und irgendwann an einen Punkt kommt, wo es entweder sehr drückend wird oder wo man sagt: “Es macht Sinn Dinge auszulagern”.
 
 \label{appendix:r-10}
 R: Dann muss man sich die Frage stellen macht es Sinn und habe ich die Men-Power bzw. das Knowhow, um diese Komplexität zu verwalten. Was nicht heißt, dass ich das Wissen im Haus haben muss. Ich kann mir genauso gut Dienstleister suchen, die mich beim Aufbau der Infrastruktur unterstützt. Aber da ist eben immer die Frage: Kann ich auf das Knowhow zurückgreifen?
