--- a/sections/Anhang/schlaak.tex
+++ b/sections/Anhang/schlaak.tex
@@ -31,7 +31,7 @@ S: Allerdings benötigte es die Daten aus dem Monolithen. Das heißt der Monolit
 S: Und diese neue Anwendung muss auf diese Daten zurückgreifen. Das war einer der ersten Zeitpunkte, wo man sich über Microservices Gedanken machen musste.
 
  \label{appendix:s-5}
-S: Und ich glaube, dass wäre eine Bedingungen, wenn man sagt: “Ok ich habe etwas, was nicht mehr in den Monolithen passt, da es komplett unabhängig ist, bzw. ein ganz anderen Zweck erfüllt und es kaum Überschneidungen gibt.
+S: Und ich glaube, das wäre eine Bedingungen, wenn man sagt: “Ok ich habe etwas, was nicht mehr in den Monolithen passt, da es komplett unabhängig ist, bzw. einen ganz anderen Zweck erfüllt und es kaum Überschneidungen gibt.
 
  \label{appendix:s-6}  \label{appendix:s-7}
 S: Dann aber trotzdem irgendeine Form von Kommunikation stattfindet, da ja auch Bestandsdaten ausgetauscht werden muss.
@@ -153,7 +153,7 @@ S: Also insbesondere würde ich den Teil trennen, wo die Endkunden die Statement
 E: Woran machen Sie Ihre Antwort fest? 
 
  \label{appendix:s-37}
-S: Ein wichtiger Grund sind Security Gründe. Das heißt, wenn du einfach nur eine API zur verfügung stellt, dann musste du nur die APIs einmal sauber durch testen. Dann bestehen eigentlich nur Security Risiken im Frontend.
+S: Ein wichtiger Grund sind Security Gründe. Das heißt, wenn du einfach nur eine API zur Verfügung stellt, dann musste du nur die APIs einmal sauber durch testen. Dann bestehen eigentlich nur Security Risiken im Frontend.
 
  \label{appendix:s-38}
 S: Was auch ganz schön ist, ist das ihr das Backend und Frontend flexiblem austauschen könnt. Zum Beispiel bei einem Projekt, habe ich mit Contentful begonnen und als die Anforderungen an das Backend gestiegen sind, konnte ich es ohne weiteres einfach wechseln.
