--- a/sections/Anhang/troppmann.tex
+++ b/sections/Anhang/troppmann.tex
@@ -21,7 +21,7 @@ T: Monolith sind ja nicht schlecht und solange man nicht, würde ich auch nicht 
 T: Technische Voraussetzungen, die vorhanden sein müssen, sind: Der Monolith muss in sich schon Umbaufähig sein, sonst endet man in einer neuen Implementierung. Es sollte eine Modulare Struktur schon vorhanden sein, zum Beispiel das verschiedene Entities getrennt verarbeitet werden. So könnte zum Beispiel ein Microservice um die User und ein anderer um  die Kommentare kümmern. Wenn die logischen Schnitte vorhanden sind, kann man aus Gründen, eine Microservice-Architektur umsetzten. 
 
 \label{appendix:t-1} \label{appendix:t-2}
-T: Also wie gesagt ich brauche eine technische Trennung, die schon vorhanden sein muss und ich mussten ein Business Case haben das sich das auch lohnt.
+T: Also wie gesagt ich brauche eine technische Trennung, die schon vorhanden sein muss und ich muss einen Business Case haben das sich das auch lohnt.
 
 E: Ok bei der technischen Trennung bzw. bei der Trennung allgemein, ist ja nicht immer der fall gegeben, dass schon Trennung vorliegt, sondern dass man sich bewusst dafür entscheidet. Um dies näher zu besprechen würde ich Frage vier vorgreifen.
 
@@ -69,7 +69,7 @@ T: Jetzt ist hier die Frage: Kann man Microservices in einem dynamischen Umfeld 
 T: Es ist auch nicht so, dass man durch Microservices schneller implementiert. Die meisten Architekturen die auf Microservices bestehen, sind langsam in der implementierung, da sie eine höhere Komplexität besitzen, die man nicht auf den ersten Blick sieht.
 
 \label{appendix:t-13}
-T: Es lohnt sich erst mittel bis langfristig.
+T: Es lohnt sich erst mittel- bis langfristig.
 
 E: Okay, aber sollte dann jedes Start-up Microservices in betracht ziehen?
 
@@ -94,7 +94,7 @@ T: Es ist hat die Frage in welcher Komplexität und Ausbaustufe.
 
 E: Okay, weil Sie es grade angebracht haben, dass Teams separat auch in unterschiedlichen Programmiersprachen arbeiten, würde ich gerne zu Frage zwei übergehen.
 
-E: Microservices ermöglicht es Teams unabhängig voneinander an unterschiedlichen Service zu arbeiten. Welche Rahmenbedingungen sehen Sie als notwendig, dass Teams separat voneinander arbeiten können?
+E: Microservices ermöglichen es Teams unabhängig voneinander an unterschiedlichen Service zu arbeiten. Welche Rahmenbedingungen sehen Sie als notwendig, dass Teams separat voneinander arbeiten können?
 
 \label{appendix:t-19}
 T: Also da gibt es mehr Dinge, die man beachten sollte. Microservices kommunizieren untereinander auf eine bestimmte Art. Das heißt, die Teams müsste sich einig sein über welche Schnittstelle die Services kommunizieren. Wird zum Beispiel eine REST-API verwendet, oder ein GraphQL-Schnittstelle?
@@ -173,7 +173,7 @@ E: Woran machen Sie Ihre Antwort fest?
 T: Ich sehe da vom fachlichen her nichts, was einem Microservice-Architektur rechtfertigt.
 
  \label{appendix:t-38}
-T: Beziehungsweise Frontend und Backend von einander Trennen, um auch beide Komponenten einfacher auszutauschen und das Backend gegebenenfalls für eine Mobile-App nutzen.
+T: Beziehungsweise Frontend und Backend voneinander Trennen, um auch beide Komponenten einfacher auszutauschen und das Backend gegebenenfalls für eine Mobile-App nutzen.
 
 E: Okay, das waren sehr gut Antworten. Da würde ich an dieser Stelle das Interview erst einmal beenden und bedanke mich ganz herzlich für Ihre Zeit.
 
