--- a/sections/Auswertung.tex
+++ b/sections/Auswertung.tex
@@ -6,43 +6,45 @@ Um die Bedingungen aus \cref{sec:bedingungen} zu bestätigen oder zu widerlegen,
 Die Interviewergebnisse zeigen, dass Microservices eine zugrundeliegende inhaltliche Trennung benötigen (siehe \cref{sec:frage1}) und die Vielseitigkeit des Unternehmens die Entscheidung für eine Umstellung beeinflusst. Bestätigt wurde dies, da Herr Rahles und Herr Troppmann den Mangel einer separaten Geschäftsdomäne betonten (siehe \cref{sec:frage5}).
 
 \label{sec:vielseitigkeit}
-Damit bekräftigen die Interviewergebnisse die Annahme, aus \cref{sec:ddd}, dass Services anhand der Geschäftsprozesse geteilt werden und bestätigen den Ansatz, dass ein System eine gewisse Vielseitigkeit benötigt, bevor es in einzelne Services geteilt werden kann.
+Damit bekräftigen die Interviewergebnisse die Annahme aus \cref{sec:ddd}, dass Services anhand der Geschäftsprozesse geteilt werden und bestätigen den Ansatz, dass ein System eine gewisse Vielseitigkeit benötigt, bevor es in einzelne Services geteilt werden kann.
 
-Die Interviewergebnisse zeigen weiter, dass eine Microservice-Architektur eine komplexe Angelegenheit ist. So setzten die Experten Monitoring, Fehlermanagement und ein automatischen Integrations- und Deployment-Prozess 
- für die Umsetzung voraus. Auch fügte Christoph Rahles in seinem Interview hinzu, dass wenn \textit{\enquote{mehr als ein oder zwei Anwendungen [hinzukommen], [...] Aspekte wie Betriebssicherheit [wichtiger werden]}} (siehe \combref{appendix:r-33}). Er zählte darunter SLAs\footnotemark und Garantien zur Uptimes, Erreichbarkeiten und Geschwindigkeit von Services.
-\footnotetext{SLA steht für Server-Level-Agreement und bezeichnet den Rahmenvertrag zwischen Auftraggeber und Dienstleister für Dienstleistungen und wird vor allem bei Outsourcing-Projekten verwendet \parencite{service-level-agreement_2020}.}
+Die Interviewergebnisse zeigen weiter, dass eine Microservice-Architektur eine komplexe Angelegenheit ist. So setzten die Experten Monitoring, Fehlermanagement und einen automatischen Integrations- und Deployment-Prozess für die Umsetzung voraus.
+%Todo Integrationprozess erklären
+Auch fügte Christoph Rahles in seinem Interview hinzu, dass bei mehreren Anwendungen (Services) \textit{\enquote{Aspekte wie Betriebssicherheit}} immer wichtiger werden (siehe \combref{appendix:r-33}). Er zählte darunter SLAs\footnotemark und Garantien von Uptimes, Erreichbarkeiten und Geschwindigkeit von Services.
 
-Die Ergebnisse belegen den Anstieg der Komplexität, welcher in \cref{sec:verteilte-systeme} über verteilte Systeme angesprochen wird. Der Vergleich zwischen den Architekturstilen aus \cref{sec:monolith} zeigt, dass monolithische Systeme besonders den Bereitstellungsprozess, das Fehlermanagement und die systemübergreifende Tests vereinfachen. Daraus lässt sich schlussfolgern, dass eine Microservice-Architektur im Vergleich zu einem Monolithen komplexer ist. Dies deckt sich mit den Empfehlungen der Experten (siehe \cref{sec:frage5}).
+\footnotetext{SLA steht für Server-Level-Agreement und bezeichnet den Rahmenvertrag für Dienstleistungen zwischen Auftraggeber und Dienstleister und wird vor allem bei Outsourcing-Projekten verwendet \parencite{service-level-agreement_2020}.}
 
-Der Anstieg der Komplexität schließt ein tieferes Verständnis über das Erstellen und Managen der Infrastruktur ein und fordert, abhängig des Wissenstands im Unternehmen, Weiterbildungen durchzuführen oder auf externe Fachkräften zurückzugreifen.
+Die Ergebnisse belegen den Anstieg der Komplexität, welcher in \cref{sec:verteilte-systeme} über verteilte Systeme angesprochen wird. Der Vergleich zwischen den Architekturstilen aus \cref{sec:monolith} zeigt, dass monolithische Systeme besonders den Bereitstellungsprozess, das Fehlermanagement und die systemübergreifenden Tests vereinfachen. Daraus lässt sich schlussfolgern, dass eine Microservice-Architektur im Vergleich zu einem Monolithen komplexer ist. Dies deckt sich mit den Empfehlungen der Experten (siehe \cref{sec:frage5}).
+
+Der Anstieg der Komplexität schließt ein tieferes Verständnis über das Erstellen und Verwalten der Infrastruktur ein und fordert, abhängig des Wissenstandes im Unternehmen, Weiterbildungen durchzuführen oder auf externe Fachkräfte zurückzugreifen.
 
 \label{sec:netzwerk}
 Aus den Interviews geht hervor, dass Sicherheit und der Austausch von Nachrichten eine Grundvoraussetzung für jedes Netzwerk ist. Dies bestätigt die angenommene Vorraussetzungen an das Netzwerk (siehe \cref{sec:bedingungen}). Datendurchsatz wurde von keinem Experten angesprochen. Dies kann man darauf zurückzuführen, dass Datendurchsatz als Grundvoraussetzung gesehen wird und keine explizite Voraussetzung für Microservices ist.
 
-Wiederum verdeutlichten die Interviewergebnisse den wirtschaftlichen Nutzen und forderten die Umstellung im Kontext der wirtschaftlichen Situation zu entscheiden (siehe \cref{sec:frage4}). Somit bestätigen die Aussagen die ursprüngliche Annahme, dass die wirtschaftliche Situation die Entscheidung beeinflusst (siehe \cref{sec:start-up}).
+Wiederum verdeutlichen die Interviewergebnisse den wirtschaftlichen Nutzen und forderten die Umstellung im Kontext der wirtschaftlichen Situation zu entscheiden (siehe \cref{sec:frage4}). Somit bestätigen die Aussagen die ursprüngliche Annahme, dass die wirtschaftliche Situation die Entscheidung beeinflusst (siehe \cref{sec:start-up}).
 
-Die Literaturrecherche belegt, dass eine Microservice-Architektur erst nach dem Produkt-Market-Fit umgesetzt werden sollte. Die Interviews zeigten jedoch, dass auch Start-ups Microservices einsetzen. Dies wird getan, um flexibel einzelne Services auszutauschen (siehe \cref{sec:frage4}). Aus der Tatsache heraus, dass sich Microservices an Geschäftsprozesse richten, kann geschlussfolgert werden, dass die ursprünglichen Geschäftsprozesse bestehen bleiben und ausschließlich der Services verändert wird.
+Die Literaturrecherche belegt, dass eine Microservice-Architektur erst nach dem Product-Market Fit umgesetzt werden sollte. Die Interviews zeigen jedoch, dass auch Start-ups Microservices einsetzen. Dies wird getan, um flexibel einzelne Services auszutauschen (siehe \cref{sec:frage4}). Aus der Tatsache heraus, dass sich Microservices an Geschäftsprozesse richten, kann geschlussfolgert werden, dass die ursprünglichen Geschäftsprozesse bestehen bleiben und ausschließlich die Services verändert wird.
 
-Wie jedoch \cref{sec:start-up} zeigt, agiert ein Start-up in einem unbestimmten Markt, sodass nicht davon auszugehen ist, dass Geschäftsprozesse bestehen bleiben. Demnach widersprechen dynamische Geschäftsprozesse den Einsatz von Microservices. Eine Annahme, die durch die Empfehlungen der monolitischen Softwarearchitektur bestätigt wird (siehe \cref{sec:frage5}).
+Wie jedoch \cref{sec:start-up} zeigt, agiert ein Start-up in einem unbestimmten Markt, sodass nicht davon auszugehen ist, dass Geschäftsprozesse bestehen bleiben. Demnach widersprechen dynamische Geschäftsprozesse dem Einsatz von Microservices. Eine Annahme, die durch die Empfehlungen der monolithischen Softwarearchitektur bestätigt wird (siehe \cref{sec:frage5}).
 
-Gleichwohl gibt es Situationen, in denen die Einführung von Microservices einen wirtschaftlich Mehrwert generieren kann, obwohl noch kein Produkt-Market-Fit vorliegt. Eine dieser Szenarien wurde von Alexander Troppmann angesprochen. Er beschrieb die Situation, in der Microservices gewählt wurden, um vorhandene Entwickler effizient einzusetzen (siehe \combref{appendix:t-6}).
+Gleichwohl gibt es Situationen, in denen die Einführung von Microservices einen wirtschaftlich Mehrwert generieren kann, obwohl noch kein Product-Market Fit vorliegt. Eine dieser Szenarien wurde von Alexander Troppmann angesprochen. Er beschrieb die Situation, in der Microservices gewählt wurden, um vorhandene Entwickler effizient einzusetzen (siehe \combref{appendix:t-6}).
 
 \label{sec:wirtschaftlich}
-Die Interviewergebnisse verwerfen somit den Gedanken, dass ein Produkt-Market-Fit vorhanden sein muss und relativeren es auf den zu erwartenden wirtschaftlichen Mehrwert.
+Die Interviewergebnisse verwerfen somit den Gedanken, dass ein Product-Market Fit vorhanden sein muss und relativeren es auf den zu erwartenden wirtschaftlichen Mehrwert.
 
-Wie die Interviewergebnisse zeigen, ist die Komplexität eines Systems die größte Motivation Microservices einzuführen. Gleichzeitig bedarf die Umstellung zu Microservices Kenntnisse über den Aufbau und Verwaltung der Infrastruktur. Dadurch können Kosten für das Unternehmen entstehen. Auf der anderen Seite verspricht sich das Unternehmen durch die Umstellung ein Verbesserung der aktuellen Situation. Übertrifft der prognostizierte Mehrwert die Kosten der Umstellung, ist die Umstellung wirtschaftlich.
+Wie die Interviewergebnisse zeigen, ist die Komplexität eines Systems die größte Motivation Microservices einzuführen. Gleichzeitig bedarf die Umstellung zu Microservices Kenntnisse über den Aufbau und Verwaltung der Infrastruktur. Dadurch können Kosten für das Unternehmen entstehen. Auf der anderen Seite verspricht sich das Unternehmen durch die Umstellung eine Verbesserung der aktuellen Situation. Übertrifft der prognostizierte Mehrwert die Kosten der Umstellung, ist die Umstellung wirtschaftlich.
 
-Aus den Antworten zur Frage fünf geht hervor, dass alle drei Experten in erster Line einen Monolithen empfehlen. Dies lässt sich darauf zurückführen, dass die Experten, aufgrund der geringen Komplexität von PluraPolit, keine Notwendigkeit sehen, Microservices umzusetzen und sie bei der geringen Anzahl an Entwickler eine verantwortungsvolle Verwaltung der Infrastruktur anzweifelen. Folglich bewerten sie die Umstellung für PluraPolit als nicht lukrativ.
+Aus den Antworten zur Frage Fünf geht hervor, dass alle drei Experten in erster Line einen Monolithen empfehlen. Dies lässt sich darauf zurückführen, dass die Experten, aufgrund der geringen Komplexität von PluraPolit, keine Notwendigkeit sehen, Microservices umzusetzen und sie bei der geringen Anzahl an Entwickler eine verantwortungsvolle Verwaltung der Infrastruktur anzweifelen. Folglich bewerten sie die Umstellung für PluraPolit als nicht lukrativ.
 
 Neben der Empfehlung zu einem Monolithen schlugen Herr Schlaak und Herr Troppmann die Trennung zwischen Front- und Backend vor.
-Da es sich jedoch nur solange um ein Monolithen handelt, wie ein einheitlicher Depolyment-Prozess vorhanden ist, handelt es sich bei der vorgeschlagenden Architektur nicht mehr um einen Monolithen.
+Da es sich jedoch nur solange um ein Monolithen handelt, wie ein einheitlicher Depolyment-Prozess vorhanden ist, handelt es sich bei der vorgeschlagenen Architektur nicht mehr um einen Monolithen.
 %Wie kann es sein, dass die Experten es nicht wussten, dass es kein Monolith ist?
-Microservices auf der anderen Seite liegen erst vor, wenn die Services eigenständig sind. \cref{sec:microservices} entsprechend ist dies erst der Fall, wenn der Services eine eigene Datenverwaltung besitzen. Dies wiederum bei der angesprochenen Trennung nicht der Fall ist. Folglich handelt es sich bei dem Vorschlag weder um ein Monolithen, noch um ein Microservice, sondern um ein verteiltes System bestehend aus zwei Komponenten, die voneinander abhängig sind.
+Microservices auf der anderen Seite liegen erst vor, wenn die Services eigenständig sind. \cref{sec:microservices} entsprechend ist dies erst der Fall, wenn die Services eine eigene Datenverwaltung besitzen. Dies ist wiederum bei der angesprochenen Trennung nicht der Fall. Folglich handelt es sich bei dem Vorschlag weder um ein Monolithen, noch um eine Microservice-Architektur, sondern um ein verteiltes System bestehend aus zwei Komponenten, die voneinander abhängig sind.
 
 Bei der Auswertung der Ergebnisse muss berücksichtigt werden, dass sich diese ausschließlich auf Start-ups und PluraPolit beziehen. Würden etablierte Firmen oder Vereine beleuchtet, wären die Bedingungen möglicherweise anders. Aus diesem Grund kann keine generelle Aussage getroffen werden.
 
-Auch wurden die Bedingungen aus einer Literaturrecherche erstellt, demnach wurden diese ausschließlich aus der Theory abgeleitet. Die Erfahrungen der Experten brachten Kenntnisse aus der Praxis ein und validierten die Bedingungen. 
-Gleichwohl handelte es sich um theoretisch abgeleitete Bedingungen.
+Auch wurden die Bedingungen aus einer Literaturrecherche erstellt, demnach wurden diese ausschließlich aus der Theorie abgeleitet. Die Erfahrungen der Experten bringen Kenntnisse aus der Praxis ein und validieren die Bedingungen. 
+Gleichwohl handelt es sich um theoretisch abgeleitete Bedingungen.
 Würde eine qualitative Untersuchung der Bedingungen an Unternehmen durchgeführt, die ihre Softwarearchitektur umgestellt haben, könnten womöglich andere Ergebnisse gefunden werden.
 
 Empfehlungen für weitere Forschungen sind daher, eine ähnliche qualitative Untersuchung bei anderen Unternehmensarten durchzuführen und mit Hilfe einer Rekonstruktion Bedingungen von Unternehmen zu ermitteln, die bereits auf Microservices umgestellt haben.
