--- a/sections/Einleitung.tex
+++ b/sections/Einleitung.tex
@@ -2,11 +2,13 @@
 
 Für ein junges Unternehmen im Bereich der digitalen Produktentwicklung ist es wichtig, Ideen schnell umzusetzen und ein erstes Feedback zu erhalten. Dies hilft bei der Bestätigung von Annahmen und bei der Gewinnung von Investoren.
 
-Diese schnelle Softwareentwicklung führt jedoch zu einigen Abstrichen hinsichtlich der Qualität. So wird zu Beginn oftmals auf einen automatischen Prozess zur Bereitstellung der Applikation verzichtet und leicht umsetzbare Lösungen werden vor langfristigen bevorzugt. Auch hinsichtlich der Auswahl der Architektur wird anfängliche Performance als oberstes Auswahlkriterium bestimmt. Endet der Weg für ein Start-up nicht nach wenigen Monaten, dann müssen die ursprünglichen Entscheidungen hinterfragt werden.
+Diese schnelle Softwareentwicklung führt jedoch zu einigen Abstrichen hinsichtlich der Softwarequalität. So wird zu Beginn oftmals auf einen automatischen Prozess zur Bereitstellung der Applikation verzichtet und leicht umsetzbare Lösungen werden vor langfristigen bevorzugt. Auch hinsichtlich der Auswahl der Architektur wird anfängliche Performance als oberstes Auswahlkriterium bestimmt.\footnotemark Endet der Weg für ein Start-up nicht nach wenigen Monaten, dann müssen die ursprünglichen Entscheidungen hinterfragt werden.
 
-Genau an diesem Punkt befindet sich das junge Unternehmen PluraPolit, das Mitte letzten Jahres gegründet wurde und innerhalb von wenigen Monaten ein fertiges Produkt entwickelte. PluraPolit hat sich zur Aufgabe gestellt, eine Bildungsplattform für Jung- und Erstwähler zu entwickeln und sie bei der Meinungsbildung zu unterstützen. Gefördert wird das Projekt von der Zentrale für politische Bildung und ist politisch unabhängig. Als gemeinnütziges Unternehmen verfolgt PluraPolit nicht die Absicht, Gewinne zu erzielen.
+\footnotetext{Das Performance als oberstes Auswahlkriterium bestimmt wird, ist eine Erkenntnis, die ich aus eigenen Beobachtungen geschlossen habe und von den Experten bestätigt wurde (siehe \combref{appendix:r-11} und \combref{appendix:s-19}).}
 
-Ich bin seit Anfang Januar an diesem Projekt beteiligt und begleite es als Frontend-Entwickler. Gemeinsam mit einem der drei Gründer (Robin Zuschke) bilden wir zu zweit die technische Abteilung des Unternehmens und sind für die Weiterentwicklung der Plattform zuständig. Die Inhalte der Plattform werden von den zwei anderen Gründern eingepflegt. Im Mittelpunkt stehen aktuelle politische Fragestellungen wie z. B.: \textit{\enquote{Sollte der öffentlich-rechtliche Rundfunk abgeschafft werden?}} Hierzu werden Statements von Politikerinnen und Politikern aller Parteien, die im Bundestag vertreten sind, eingeholt und als Audioaufzeichnungen ohne inhaltliche Veränderung auf die Webseite geladen. Neben Fragen, die ausschließlich von Politikern diskutiert werden, kommen auch Themen auf die Plattform, die von den dafür ausgewiesenen Expertinnen und Experten beantwortet werden. So gibt es z. B. bei der oben genannten Fragestellung auch eine Stellungnahme des Vertreters der Landesrundfunkanstalten ARD. 
+Genau an diesem Punkt befindet sich das junge Unternehmen PluraPolit, das Mitte letzten Jahres gegründet wurde und innerhalb von wenigen Monaten ein fertiges Produkt entwickelt hat. PluraPolit hat sich zur Aufgabe gestellt, eine Bildungsplattform für Jung- und Erstwähler zu entwickeln und sie bei der Meinungsbildung zu unterstützen. Gefördert wird das Projekt von der Landeszentrale für politische Bildung Hamburg und ist politisch unabhängig. Als gemeinnütziges Unternehmen verfolgt PluraPolit nicht die Absicht, Gewinne zu erzielen.
+
+Ich bin seit Anfang Januar an diesem Projekt beteiligt und begleite es als Frontend-Entwickler. Gemeinsam mit einem der drei Gründer (Robin Zuschke) bilden wir zu zweit die technische Abteilung des Unternehmens und sind für die Weiterentwicklung der Plattform zuständig. Die Inhalte der Plattform werden von den zwei anderen Gründern eingepflegt. Im Mittelpunkt stehen aktuelle politische Fragestellungen wie z.~B.: \textit{\enquote{Sollte der öffentlich-rechtliche Rundfunk abgeschafft werden?}} Hierzu werden Statements von Politikerinnen und Politikern aller Parteien, die im Bundestag vertreten sind, eingeholt und als Audioaufzeichnungen ohne inhaltliche Veränderung auf die Webseite geladen. Neben Fragen, die ausschließlich von Politikern diskutiert werden, kommen auch Themen auf die Plattform, die von den dafür ausgewiesenen Expertinnen und Experten beantwortet werden. So gibt es z.~B. bei der oben genannten Fragestellung auch eine Stellungnahme des Vertreters der Landesrundfunkanstalten ARD. 
 
 Im Gegensatz zu anderen Anbietern von Nachrichten rund um Politik, stellt PluraPolit ausschließlich Sprachnachrichten auf die Plattform. Die Entscheidung für das Medium Tonaufnahme wurde bewusst getroffen, um eine junge Zielgruppe anzusprechen und die einzelnen Beiträge wie einen Podcast hören zu können.
 
@@ -21,12 +23,12 @@ React.js ist eine JavaScript Bibliothek zum Erstellen von Benutzeroberflächen. 
 Gehostet werden die Applikationen über den Cloud-Computing-Anbieter Amazon Web Services\footnotemark (AWS).
 \footnotetext{AWS ist ein Tochterunternehmen des Online-Versandhändlers Amazon mit einer Vielzahl an Diensten im Bereich Cloud-Computing \parencite{amazon_homepage}.}
 
-Es wurde sich für diesen Dienst entschieden, um möglichst geringe Fixkosten zu haben und bei Bedarf die Kapazität ändern zu können. Die Anwendung wird in einem Docker-Container\footnote{Docker-Container sind isolierte virtuelle Umgebungen, in der eine Anwendung separat vom System des Rechners betrieben wird. Dadurch können Applikationen leicht von einem Computer zu einem Hosting Dienst geladen werden \parencite{docker_container}.} gespeichert und per Github Actions\footnote{Github Actions ist ein Software Dienst von Github, welches hilft Prozesse zu automatisieren. Es kann z. B. zum automatischen Bereitstellen einer Webseite verwendet werden \parencite{github_actions}.} an AWS geliefert. Dort wird die Applikation in den Elastic Container Service\footnote{Elastic Container Service ist ein Container-Orchestrierungs-Service von Amazon Web Services, mit dessen Hilfe Container skalierbar verwaltet werden können \parencite{aws_ecs}.} (ECS) geladen und von Fargate\footnote{Fargate ist eine Serverless-Datenverarbeitungs-Engine, welche Container im Rahmen der vordefinierten Parameter verwaltet. So werden z. B. durch diesen Dienst bei erhöhtem Bedarf neue Instanzen bereitgestellt und bei Verlust von Last Container-Instanzen eliminiert \parencite{aws_fargate}.} verwaltet. 
-Die Daten werden in einer PostgreSQL\footnote{PostgreSQL ist eine objektrelationale Datenbank, welche sowohl Elemente einer relationalen als auch einer Objektdatenbank besitzt \parencite{postgresql}.} Datenbank abgespeichert, die auf einer Relational Database Service\footnote{RDS ist ein Service von Amazon Web Services, mit dessen Hilfe relationale Datenbanken verwaltet werden. Der Dienst ermöglicht das Aufsetzen, Managen und Skalieren von Datenbanken, wie z. B. MySQL, MariaDB und PostgreSQL \parencite[vgl.][S.161 f.]{baron_aws_2016}.} (RDS) Instanz hinterlegt ist. 
+Es wurde sich für diesen Dienst entschieden, um möglichst geringe Fixkosten zu haben und bei Bedarf die Kapazität ändern zu können. Die Anwendung wird in einem Docker-Container\footnote{Docker-Container sind isolierte virtuelle Umgebungen, in der eine Anwendung separat vom System des Rechners betrieben wird. Dadurch können Applikationen leicht von einem Computer zu einem Hosting Dienst geladen werden \parencite{docker_container}.} installiert und per Github Actions\footnote{Github Actions ist ein Software Dienst von Github, welches hilft Prozesse zu automatisieren. Es kann z.~B. zum automatischen Bereitstellen einer Webseite verwendet werden \parencite{github_actions}.} an AWS geliefert. Dort wird die Applikation in den Elastic Container Service\footnote{Elastic Container Service ist ein Container-Orchestrierungs-Service von Amazon Web Services, mit dessen Hilfe Container skalierbar verwaltet werden können \parencite{aws_ecs}.} (ECS) geladen und von Fargate\footnote{Fargate ist eine Serverless-Datenverarbeitungs-Engine, welche Container im Rahmen der vordefinierten Parameter verwaltet. So werden z.~B. durch diesen Dienst bei erhöhtem Bedarf neue Instanzen bereitgestellt und bei Verlust von Last Container-Instanzen eliminiert \parencite{aws_fargate}.} verwaltet. 
+Die Daten werden in einer PostgreSQL\footnote{PostgreSQL ist eine objektrelationale Datenbank, welche sowohl Elemente einer relationalen als auch einer Objektdatenbank besitzt \parencite{postgresql}.} Datenbank abgespeichert, die auf einer Relational Database Service\footnote{RDS ist ein Service von Amazon Web Services, mit dessen Hilfe relationale Datenbanken verwaltet werden. Der Dienst ermöglicht das Aufsetzen, Managen und Skalieren von Datenbanken, wie z.~B. MySQL, MariaDB und PostgreSQL \parencite[vgl.][S.161 f.]{baron_aws_2016}.} (RDS) Instanz hinterlegt ist. 
 Bilder und Tonaufnahmen werden in einem Simple Storage Service Bucket\footnote{Der Speicherdienst von AWS S3 ist einer der ersten Dienste des Cloud-Computing-Anbieters. Er erleichtert die Speicherung von Objekten in der Cloud jeglichen Formats und lässt sich einfach verwalten. Die verwendete Speichermenge ist dynamisch und richtet sich automatisch nach der Größe der Dateien \parencite[vgl.][S. 23]{baron_aws_2016}.} (S3) gespeichert und stehen der Webseite per URL zur Verfügung. 
 Um automatisch zu jedem Statement ein Intro zu generieren, wurde eine AWS Lambda\footnote{Amazon Lambda ist ein Service von AWS, über den Funktionalität innerhalb der Cloud ausgeführt wird. Es handelt sich dabei um ein Service der Serverless ist, was bedeutet, dass man sich nicht um das Betriebssystem des Servers kümmern muss. Somit können kleine Programme mit wenig Aufwand ausgeführt werden \parencites[vgl.][Kap. 15.3]{wolff_microservices_2018}{aws_lambda}.} Funktion geschrieben, die auf der Basis von Beschriftungstexten für jede Audioaufzeichnung eine weitere Aufnahme für die Einleitung erstellt.
 
-Mit wachsender Codebase erhöht sich der Aufwand, der notwendig ist, um neue Funktionen zu entwickeln und zu implementieren. Dies liegt besonders daran, dass sich im Laufe der Entwicklung viele Abhängigkeiten zwischen Klassen und Methoden ergeben haben. Hierdurch steigt der Aufwand, der nötig ist, um sich in den Quellcode einzuarbeiten. Verursacht wird diese Abhängigkeit, indem im Frontend die Funktionen und Klassen in logisch getrennte Bausteine geteilt und an mehreren Stellen verwendet werden. Dies ermöglicht zwar eine schnelle Entwicklung, führt jedoch dazu, dass die Veränderung einer Komponente Änderungen an mehreren Stellen auslöst. Diese Relativitäten machen es mit steigender Menge an Sourcecode immer komplexer, weitere Funktionen umzusetzen ohne die bestehende Logik zu verändern. Hinzukommt, dass neben dem eigenen Quellcode auch externe Funktionalitäten genutzt werden, welche durch den Paketverwaltungsdienst von Node.js \parencite{nodejs} npm installiert werden.
+Mit wachsender Codebase erhöht sich der Aufwand, der notwendig ist, um neue Funktionen zu entwickeln und zu implementieren. Dies liegt besonders daran, dass sich im Laufe der Entwicklung viele Abhängigkeiten zwischen Klassen und Methoden ergeben haben. Hierdurch steigt der Aufwand, der nötig ist, um sich in den Quellcode einzuarbeiten. Verursacht wird diese Abhängigkeit, indem im Frontend die Funktionen und Klassen in logisch getrennte Bausteine geteilt und an mehreren Stellen verwendet werden. Dies ermöglicht zwar eine schnelle Entwicklung, führt jedoch dazu, dass die Veränderung einer Komponente Änderungen an mehreren Stellen auslöst. Diese Relativitäten machen es mit steigender Menge an Quellcode immer komplexer, weitere Funktionen umzusetzen ohne die bestehende Logik zu verändern. Hinzu kommt, dass neben dem eigenen Quellcode auch externe Funktionalitäten genutzt werden, welche durch den Paketverwaltungsdienst von Node.js \parencite{nodejs} npm installiert werden.
 
 Diese werden jedoch nur in Teilen der Anwendung verwendet, werden allerdings zum gesamten Frontend hinzugefügt. Insgesamt verlangsamt es die Bereitstellung der Applikation, da sie während des Prozesses installiert werden müssen. Für eine schnelle Entwicklung ist es somit wichtig die Zahl der externen Pakete auf das Nötigste zu begrenzen.
 
@@ -35,9 +37,12 @@ Um in Zukunft eine schnelle Weiterentwicklung der Applikation sicherzustellen, h
 \subsection{Zielsetzung}
 \label{sec:zielsetzung}
 
-Schon im Jahr 2005 hat Peter Rodgers auf der Web Services Edge Conference über Micro-Web Services referiert. Er kombinierte die Konzepte der Service-Orientierten-Architektur (SOA) mit denen der Unix-Philosophie und sprach von verbundenen REST-Services. Dadurch versprach er sich eine Verbesserung der Flexibilität der Service-Orientierten-Architektur \parencite[vgl.][]{rodgers_peter}. Erstmalig 2011 wurde dieser Ansatz als Microservice-Architektur bezeichnet \parencite[vgl.][]{dragoni_microservices_2017}. Ab 2013 entwickelte sich rund um das Thema ein immer größer werdendes Interesse, welches dazu führte, dass mehr Blogposts, Bücher, sowie wissenschaftliche Arbeiten geschrieben wurden. Somit sind die Definition und die Charakteristiken bis ins Detail beleuchtet. Des Weiteren gibt es einige Beispiele von bekannten Unternehmen, wie Netflix und Amazon, die die Herausforderungen der Überführung ihres Systems zu einer Microservice-Architektur beschreiben.
+Schon im Jahr 2005 hat Peter Rodgers auf der Web Services Edge Conference über Micro-Web Services referiert. Er kombinierte die Konzepte der Service-Orientierten-Architektur (SOA) mit denen der Unix-Philosophie und sprach von verbundenen REST-Services. Dadurch versprach er sich eine Verbesserung der Flexibilität der SOA \parencite[vgl.][]{rodgers_peter}. Dieser Ansatz wurde erstmalig 2011 als Microservice-Architektur bezeichnet \parencite[vgl.][]{dragoni_microservices_2017}. Ab 2013 entwickelte sich rund um das Thema ein immer größer werdendes Interesse, welches dazu führte, dass mehr Blogposts, Bücher, sowie wissenschaftliche Arbeiten verfasst wurden. Somit sind die Definition und die Charakteristiken bis ins Detail beleuchtet. Des Weiteren gibt es einige Beispiele von bekannten Unternehmen, wie Netflix und Amazon, die die Herausforderungen der Überführung ihres Systems zu einer Microservice-Architektur beschreiben.
 
-Trotz der Informationslage ist es noch unbekannt, ob auch Start-ups Microservices umsetzen können und welche Bedingungen dafür erforderlich wären. Es gibt kaum Erfahrungen, die es PluraPolit ermöglichen abzuschätzen, ob sich eine Umstellung zum aktuellen Zeitpunkt lohnt und welche Eigenschaften ein Unternehmen erfüllen muss.
+Trotz der Informationslage ist es noch unbekannt, ob auch Start-ups\footnotemark Microservices umsetzen können und welche Bedingungen dafür erforderlich wären. Es gibt kaum Erfahrungen, die es PluraPolit ermöglichen abzuschätzen, ob sich eine Umstellung zum aktuellen Zeitpunkt lohnt und welche Eigenschaften ein Unternehmen erfüllen muss.
+
+\footnotetext{
+Ein Start-up, oder auch Start-up-Unternehmen, ist ein junges, noch nicht etabliertes Unternehmen, welches eine innovative Geschäftsidee verwirklichen möchte \parencite[vgl.][]{achleitner_start-up_2018}.}
 
 Das Ziel dieser Arbeit ist es deshalb, für PluraPolit die Bedingungen zu ermitteln, die für eine mögliche Umstellung erforderlich sind und eine klare Bewertung für den Nutzen des Vorhabens abzugeben. Es sollen die notwendigen Anforderungen an ein Unternehmen ausgearbeitet werden, das sein System von einer monolithischen Architektur zu einer Microservice-Architektur umstellen möchte.
 
@@ -55,4 +60,4 @@ Im ersten Abschnitt wird die theoretische Grundlage für Microservices dargestel
 
 Im nächsten Abschnitt werden diese Bedingungen im Rahmen einer qualitativen Befragung von Experten im Bereich Microservices eingeschätzt und bewertet. Hierfür werden Interviews durchgeführt. Es wird beschrieben, welche Experten ausgewählt werden und welche Expertise sie mitbringen. Die einzelnen Interviewfragen werden vorgestellt und deren Zusammenhang zur Zielsetzung erklärt. Dadurch wird deutlich, welchen Einfluss die Expertenaussagen auf die Einschätzung für PluraPolit haben.
 
-Abschließend werden die Aussagen aus den Befragungen mit der theoretischen Ausarbeitung verglichen und auf PluraPolit bezogen. Beendet wird die Arbeit mit einer Einschätzung für PluraPolit, in der eine klare Beurteilung für oder gegen eine Umstellung abgegeben wird.
+Abschließend werden die Aussagen aus den Befragungen mit der theoretischen Ausarbeitung verglichen und auf PluraPolits Infrastruktur bezogen. Beendet wird die Arbeit mit einer Einschätzung für PluraPolit, in der eine klare Beurteilung für oder gegen eine Umstellung abgegeben wird.
