--- a/sections/Fazit.tex
+++ b/sections/Fazit.tex
@@ -1,10 +1,10 @@
 \section{Fazit}
 
-Diese Bachelorarbeit hat das Ziel, die Bedingungen zu ermitteln, die für eine mögliche Umstellung für PluraPolit erforderlich sind und eine klare Bewertung für den Nutzen des Vorhaben abzugeben. Zu diesem Zweck wurden erste Bedingungen aus einer Literaturrecherche abgeleitet und von Experten innerhalb eines quantitativen Leitfadeninterviews validiert.
+Diese Abhandlung hat das Ziel, die Bedingungen zu ermitteln, die für eine mögliche Umstellung von einer monolithischen zu einer Microservice-Architektur für PluraPolit erforderlich sind und eine klare Bewertung für den Nutzen des Vorhabens abzugeben. Zu diesem Zweck wurden erste Bedingungen aus einer Literaturrecherche abgeleitet und von Experten innerhalb eines quantitativen Leitfadeninterviews validiert.
 
-Die Ergebnisse zeigen, dass von den neun Bedingungen, aus der Literaturrecherche, sechs bestätigt wurden. Als wichtigste Bedingung stellte sich die Bewertung der Profitabilität heraus, welche als Bedingung hinzu genommen wurde. Allerdings hängt diese vom zu erwartenden Mehrwert und den notwendigen Kosten ab. Entscheidend für den Mehrwert ist die Komplexität des Unternehmens. Die Kosten einer Umsetzung wurden zum einen an den zu verwendeten Ressourcen für die Infrastruktur festgehalten und an den Wissenstand der Mitarbeiter.
+Die Ergebnisse zeigen, dass von den neun Bedingungen, aus der Literaturrecherche, sechs bestätigt wurden. Als wichtigste Bedingung stellte sich die Bewertung der Profitabilität heraus, welche als Bedingung hinzu genommen wurde. Allerdings hängt diese vom zu erwartenden Mehrwert und den notwendigen Kosten ab. Entscheidend für den Mehrwert ist die Komplexität des Unternehmens. Die Kosten einer Umsetzung wurden zum einen an den zu verwendeten Ressourcen für die Infrastruktur festgehalten und zum anderen an den Wissensstand der Mitarbeiter.
 
-Die Problemstellung der Arbeit verwies darauf, dass aufgrund funktionaler Abhängigkeiten die Produktivität von PluraPolit abnimmt. Es wurde davon ausgegangen, dass Microservices dieses Problem am geeignetsten löst.
+Die Problemstellung der Arbeit verwiest darauf, dass aufgrund funktionaler Abhängigkeiten die Produktivität von PluraPolit abnimmt. Es wurde davon ausgegangen, dass Microservices dieses Problem am geeignetsten löst.
 Wie die Ergebnisse jedoch zeigen, kann ebenfalls ein Monolith genutzt werden. Vielmehr steigt durch den Einsatz einer Microservice-Architektur die Komplexität und Aufwand zur Erstellung und Verwaltung der Infrastruktur.
 
 Die Ergebnisse haben schließlich gezeigt, dass vor der Umstellung folgende Bedingungen erfüllt sein müssen:
