--- a/sections/Methodik.tex
+++ b/sections/Methodik.tex
@@ -1,7 +1,7 @@
 \section{Methodik}
 \label{sec:methodik}
 
-Um herauszufinden, ob die Bedingungen aus der Literaturrecherche (\cref{sec:bedingungen}) notwendig sind, bevor PluraPolit seine Softwarearchitektur ändern kann, wurden Experteninterview durchgeführt. Diese Methode wurde gewählt, um trotz der wenigen Literatur, die es zu diesem Thema gab, eine qualitative Einschätzung zu bekommen und abschließend eine Empfehlung für PluraPolit zu geben. Es wurde sich für ein Leitfadeninterview entschieden, um sowohl subjektive Erfahrungen zu erhalten, als auch die Antworten vergleichen zu können.
+Um herauszufinden, ob die Bedingungen aus der Literaturrecherche (\cref{sec:bedingungen}) notwendig sind, bevor PluraPolit seine Softwarearchitektur ändern kann, wurden Experteninterviews durchgeführt. Diese Methode wurde gewählt, um trotz der geringen Literatur, die es zu diesem Thema gibt, eine qualitative Einschätzung zu bekommen und abschließend eine Empfehlung für PluraPolit zu geben. Es wurde sich für ein Leitfadeninterview entschieden, um sowohl subjektive Erfahrungen zu erhalten, als auch die Vergleichbarkeit der Antworten zu garantieren.
 
 \input{sections/Methodik/interviewfragen}
 
