--- a/sections/Methodik/analyse.tex
+++ b/sections/Methodik/analyse.tex
@@ -6,4 +6,4 @@ Nach dem automatischen Transkribieren wurden die Texte einer manuellen Korrektur
 
 Die einzelnen Aussagen aus den Interviews wurden offen codiert und anschließend in Themen zusammengefasst. Zur besseren Vergleichbarkeit ordnete man  diese Themen einzelnen Kategorien zu.
 
-Abschließend wurden die Informationen aus den Interviews mit den Ergebnissen der Literaturrecherche verglichen und zu Erkenntnissen zusammengefasst. Mit Hilfe dieser Erkenntnissen wurde abschließend die Forschungsfrage beantwortet.
+Die Informationen aus den Interviews wurden mit den Ergebnissen der Literaturrecherche verglichen und zu Erkenntnissen zusammengefasst. Mit Hilfe dieser Erkenntnissen wurde abschließend die Forschungsfrage beantwortet.
