--- a/sections/Methodik/ergebnisse/frage2.tex
+++ b/sections/Methodik/ergebnisse/frage2.tex
@@ -1,7 +1,7 @@
 \subsubsection{Frage 2}
 \label{sec:frage2}
 
-\textit{Microservices ermöglicht es Teams, unabhängig voneinander an unterschiedlichen Services zu arbeiten. Welche Rahmen Bedingungen sehen Sie als notwendig, dass Teams separat voneinander Arbeiten können?}
+\textit{Microservices ermöglichen es Teams, unabhängig voneinander an unterschiedlichen Services zu arbeiten. Welche Rahmenbedingungen sehen Sie als notwendig, dass Teams separat voneinander arbeiten können?}
 
 Herr Rahles fügte den Vermerk hinzu, dass die Teams stets zu einem Unternehmen gehören und nie ganz unabhängig sind.\footnote{
 \textit{\enquote{Auch diese Teams gehören zu einem Unternehmen […], das heißt unabhängig voneinander sind sie nie.}} (siehe \combref{appendix:r-15})
@@ -9,7 +9,7 @@ Herr Rahles fügte den Vermerk hinzu, dass die Teams stets zu einem Unternehmen 
 Auch beurteilte er, dass Teams \textit{\enquote{interdisziplinär aufgestellt sein [müssen], [damit] sie wirklich unabhängig voneinander arbeiten können}} (siehe \combref{appendix:r-16}) und wies in seinem Interview daraufhin, dass Teams \textit{\enquote{innerhalb [ihrer] Business Domäne [...] der Owner sein [müssen]}} (siehe \combref{appendix:r-20}).
 
 Herr Schlaak und Herr Troppmann führten an, dass insbesondere Schnittstellen definiert und beschrieben sein müssen.\footnote{
-\textit{\enquote{Ganz wichtig ist, dass die Schnittstellen der Services entsprechend gut beschrieben sind […]}} (siehe \combref{appendix:s-13}); \textit{\enquote{[…] die Teams müssen sich einig sein, über welche Schnittstelle die Services kommunizieren.}} (siehe \combref{appendix:t-19}); \textit{\enquote{Schnittstellen nach außen müssen geklärt sein.}} ( siehe \combref{appendix:t-22})
+\textit{\enquote{Ganz wichtig ist, dass die Schnittstellen der Services entsprechend gut beschrieben sind […]}} (siehe \combref{appendix:s-13}); \textit{\enquote{[…] die Teams müssen sich einig sein, über welche Schnittstelle die Services kommunizieren.}} (siehe \combref{appendix:t-19}); \textit{\enquote{Schnittstellen nach außen müssen geklärt sein.}} (siehe \combref{appendix:t-22})
 }
 
 Weiterführend wurde von Herr Troppmann eine Struktur hervorgehoben, die Abläufe genauer beschreibt.\footnote{
