--- a/sections/Methodik/experten.tex
+++ b/sections/Methodik/experten.tex
@@ -1,14 +1,14 @@
 \subsection{Auswahl der Experten}
 
 Für das Interview wurden Christoph Rahles, Alexander Troppmann und Sebastian Schlaak befragt.
-Diese Experten wurden aufgrund ihrer jahrelangen Erfahrung im Bereich der Microservice-Architektur und Start-up-Branche ausgewählt. Sowohl Herr Rahles, Herr Troppmann und Herr Schlaak sind Senior Software Developer mit Erfahrungen im Management. So haben alle drei mehre Jahre als Chief Technology Officer (CTO) gearbeitet und können fundierte Aussagen über Software architektonische Entscheidungen geben. Darüber hinaus hält Herr Troppmann Informationsveranstaltungen in denen er erklärt, wie man mit Hilfe der Programmiersprache Golang leichtgewichtige Microservices erstellt kann.
+Diese Experten wurden aufgrund ihrer jahrelangen Erfahrung im Bereich der Microservice-Architektur und Start-up-Branche ausgewählt. Sowohl Herr Rahles, Herr Troppmann und Herr Schlaak sind Senior Software Developer mit Erfahrungen im Management. So haben alle drei mehre Jahre als Chief Technology Officer (CTO) gearbeitet und können fundierte Aussagen über softwarearchitektonische Entscheidungen geben. Darüber hinaus hält Herr Troppmann Informationsveranstaltungen in denen er erklärt, wie man mit Hilfe der Programmiersprache Golang leichtgewichtige Microservices erstellt.
 
-Des Weiteren wurden alle drei ausgewählt, da sie PluraPolit kennen und bei der Entwicklung beteiligt waren. So hat Herr Rahles insbesondere in der Anfangsphase PluraPolit geholfen, die Softwarearchitektur mit aufzubauen und kennt diese detailliert.
+Des Weiteren wurden alle drei ausgewählt, da sie die Softwarearchitektur von PluraPolit kennen und bei der Entwicklung beteiligt waren. So hat Herr Rahles insbesondere in der Anfangsphase PluraPolit geholfen, die Softwarearchitektur mit aufzubauen und kennt diese detailliert.
 
 Herr Troppmann und die Mitarbeiter von PluraPolit haben erst vor einigen Wochen gemeinsam an einem Hackathon teilgenommen und die Plattform konzeptionell weiter entwickelt. Es wurden Entwürfe erstellt, wie PluraPolit auch für den Schulunterricht eingesetzt werden kann. Folglich kennt Herr Troppmann den aktuellen Stand der Bildungsplattform.
 
-Sowohl ich als auch Robin Zuschke haben vor der Zeit bei PluraPolit mit Herrn Schlaak zusammen gearbeitet und standen gelegentlich mit Herr Schlaak im Austausch. Demnach kannte Herr Schlaak vor dem Interview den technischen Standpunkt und die internen Abläufe.
+Sowohl Robin Zuschke, als auch ich haben vor der Zeit bei PluraPolit mit Herrn Schlaak zusammen gearbeitet und standen gelegentlich mit ihm im Austausch. Demnach kannte Herr Schlaak vor dem Interview den technischen Zustand und die internen Abläufe.
 
-Herr Rahles und Herr Schlaak kannten sich vor dem Interview, da sie von 2011 bis 2013 gemeinsam bei Käuferportal gearbeitet haben. Aufgrund dessen, dass die zwei Experten nach den gemeinsamen Arbeitsjahren in regelmäßigem Kontakt standen, wurden sie gebeten, sich nicht über die Inhalte des Interviews auszutauschen, sodass die Unabhängigkeit ihrer Antworten gewährleistet werden konnte.
+Herr Rahles und Herr Schlaak kannten sich vor dem Interview, da sie von 2011 bis 2013 gemeinsam bei der BEKO Käuferportal GmbH gearbeitet haben. Aufgrund dessen, dass die zwei Experten nach den gemeinsamen Arbeitsjahren in regelmäßigem Kontakt standen, wurden sie gebeten, sich nicht über die Inhalte des Interviews auszutauschen, sodass die Unabhängigkeit ihrer Antworten gewährleistet werden konnte.
 
 Ausgenommen der Verbindung zwischen Herrn Rahles und Herrn Schlaak, kannten sich die Experten nicht.
