--- a/sections/Methodik/durchfuehrung.tex
+++ b/sections/Methodik/durchfuehrung.tex
@@ -1,12 +1,12 @@
 \subsection{Durchführung des Interviews}
 
-Die drei Experten wurden eine Woche vor dem Interview per Nachricht (Slack, oder WhatsApp) kontaktiert und zu einem Gespräch eingeladen, welches online stattfinden sollte. Es wurde ein Konferenzgespräch von Angesicht zu Angesicht gewählt, um eine persönlichere Atmosphäre zu generieren und gleichzeitig die Kontaktbeschränkungen in der Coronapandemie einzuhalten. Hinzu kam, dass Herr Troppmann in München wohnte und ein Gespräch nur online möglich war.
+Die drei Experten wurden eine Woche vor dem Interview per Nachricht (Slack, oder WhatsApp) kontaktiert und zu einem Gespräch eingeladen, welches online stattfinden sollte. Es wurde ein Konferenzgespräch von Angesicht zu Angesicht gewählt, um eine persönlichere Atmosphäre zu generieren und gleichzeitig die Kontaktbeschränkungen in Phase der Coronapandemie einzuhalten.
 
-Alle Interviewpartner bekamen die Fragen zur Vorbereitung vorab zugeschickt. Sie wurden vor dem Gespräch in Kenntnis gesetzt, dass dieses aufgezeichnet wird, um die anschließende Transkripierung zu vereinfachen. Dies geschah zum einen während der Absprachen eine Woche vor den Interviews, sowie unmittelbar vor der Aufnahme. Des Weiteren gaben die Experten eine mündliche Bestätigung ab, dass ihre Aussagen in der Bachelorarbeit verwendet werden dürfen.
+Alle Interviewpartner bekamen die Fragen zur Vorbereitung vorab zugeschickt. Sie wurden vor dem Gespräch in Kenntnis gesetzt, dass dieses aufgezeichnet wird, um die anschließende Tran­skrip­ti­on zu ermöglichen. Dies geschah zum einen während der Absprachen eine Woche vor den Interviews, sowie unmittelbar vor der Aufnahme. Des Weiteren gaben die Experten eine mündliche Bestätigung ab, dass ihre Aussagen in dieser Abhandlung verwendet werden dürfen.
 
 Um während des Interviews Rückfragen zu stellen, wurden zusätzlich zur laufenden Aufzeichnung kurze Notizen erstellt.
 
-Die Interviews wurden nacheinander gehalten. Der erste Interviewpartner war Christoph Rahles am 18 Juni 2020 gehalten, gefolgt von Alexander Troppmann am 21 Juni und Sebastian Schlaak am 24 Juni.
+Die Interviews wurden nacheinander gehalten. Der erste Interviewpartner war Christoph Rahles am 18 Juni 2020, gefolgt von Alexander Troppmann am 21 Juni und Sebastian Schlaak am 24 Juni.
 
 In allen drei Fällen hat das Interview mit folgender Frage gestartet:
 
@@ -18,16 +18,16 @@ In zwei der drei Interviews (Christoph Rahles und Alexander Troppmann) wurden na
 
 Es folgte Frage zwei:
 
-\textit{Welche Rahmen Bedingungen sehen Sie als notwendig, dass Teams separat von einander Arbeiten können?}
+\textit{Welche Rahmenbedingungen sehen Sie als notwendig, dass Teams separat voneinander arbeiten können?}
 
-Eingeleitet wurde diese Frage mit den Erkenntnissen aus der Literaturrecherche, dass Microservices es Teams ermöglichen, unabhängig von einander an unterschiedlichen Services zu arbeiten.
+Eingeleitet wurde diese Frage mit den Erkenntnissen aus der Literaturrecherche, dass Microservices es Teams ermöglichen, unabhängig voneinander an unterschiedlichen Services zu arbeiten.
 
 Diese Zusammenfassung sollte den Experten als Möglichkeit dienen, diese Annahme zu berichtigen und sich bei ihren Antworten darauf zu beziehen.
 
 Die Frage zielte darauf ab, die Auffassung zu valideren, dass:
 \begin{enumerate}
 	\item Teams eigenverantwortlich arbeiten und
-	\item ausschließlich über die Schnittstellen auf Informationen zu greifen.
+	\item ausschließlich über die Schnittstellen auf Informationen zugreifen.
 \end{enumerate}
 Es wurde sich für eine möglichst offene Frage entschieden, um den Experten die Möglichkeit zugeben, uneingeschränkt zu antworten.
 
@@ -40,14 +40,14 @@ Frage drei zielte darauf ab, Bedingung fünf, sechs und sieben zu überprüfen (
 \begin{enumerate}
 	\item die Kommunikation zwischen den Services ermöglicht,
 	\item Zugriffe verwaltet und
-	\item ein hohen Datendurchsatz besitzt.
+	\item einen hohen Datendurchsatz besitzt.
 \end{enumerate}
 
 Auch hier wählte man bewusst eine offene Fragestellung.
 
-Frage vier ging der Fragestellung nach, ob Microservices in einem dynamischen Umgeld eingesetzt werden sollten. Hierfür wurde vorab eine Zusammenfassung aus der Literaturrecherche eingeschoben:
+Frage vier ging der Fragestellung nach, ob Microservices in einem dynamischen Umfeld eingesetzt werden sollten. Hierfür wurde vorab eine Zusammenfassung aus der Literaturrecherche eingeschoben:
 
-\textit{Ein Start-up zeichnet sich dadurch aus, dass es insbesondere in der Anfangsphase zu vielen Veränderungen in der ursprünglichen Geschäftsidee kommt. Microservices auf der anderen Seite zeichnen sich durch aus, dass sie feste Schnittstellen und Kontextgrenzen besitzen.}
+\textit{Ein Start-up zeichnet sich dadurch aus, dass es insbesondere in der Anfangsphase zu vielen Veränderungen in der ursprünglichen Geschäftsidee kommt. Microservices auf der anderen Seite zeichnen sich dadurch aus, dass sie feste Schnittstellen und Kontextgrenzen besitzen.}
 
 Die Zusammenfassung sollte den Schwerpunkt der Fragestellung auf die Phasen eines Start-up lenken. Das Ziel dieser Frage war es, den Zeitpunkt, oder das Ereignis zu ermitteln, ab wann ein Start-up Microservices verwenden sollte. Ging der Experte nicht von selbst auf diese Fragestellung ein, gab es zusätzliche Fragen im Interview.
 
